--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Fixed section start -->
 
  <div class="fixed-section row">
-			<a class='fixed-link' href="tel:+37495332225" >
+			<a class='fixed-link' href="tel:7253052450">
 				<img style="height: 40px;" src="images/phone-6015.png" alt="">		
 			</a>	
 		</div>
