--- a/index.html
+++ b/index.html
@@ -515,8 +515,14 @@
 
 											<div class="testimonial-block text-center" style="font-size: 17px; font-style: italic; color: grey	;">
 												LG, Asko, Chambers, Magic Chef, Tappan, General Electric, Samsung, Fisher&Paykel, Miele, Hotpoint, Sub-Zero, Jenn Air, Thermador, Viking, Whirlpool, Amana, Bosch, Dacor, Electrolux, Frigidaire, GE, Kenmore, KitchenAid, Maytag, Panasonic, and more!											
-											</div>
-
+										</div>
+										<div class="col-lg-8 mx-auto" style="margin-top: 40px;">
+											<div class="testimonial-block" style="font-size: 17px; font-style: italic; color: grey	;">					
+											<a style="color: grey;" href="privacy.html">
+												Privacy Policy
+											</a>
+										</div>
+									</div>
 										</div>
 									</div>
 								</div> 
