--- a/privacy.html
+++ b/privacy.html
@@ -45,6 +45,16 @@
 
                 <h5>Will never </h5>
                 <P>rent or sell your email address,mailing address, or phone number to anyone .</P>
+
+                <h5>The examples of texts we use</h5>
+                <p>"Reminder: Your appointment at [Business Name] is scheduled for [Date] at [Time]. Please reply YES to confirm or call [Phone Number] to reschedule.
+                    Reply STOP to opt-out of SMS reminders."</p>
+                <p>"Reminder: Your scheduled appliance maintenance with [Archie] is coming up on [Date] at [Time]. For questions, call us at [Phone Number].
+                    Reply STOP to opt-out of SMS reminders."</p>
+                 <p>"Hi [Customer Name], we’ve reviewed your appliance and the repair estimate is [Amount]. To approve and schedule, reply YES. For more info, call [Phone Number].
+                        Reply STOP to opt-out of SMS updates."</p>
+           
+                </div>
            
                 </div>
         </div>
