--- a/index.html
+++ b/index.html
@@ -522,6 +522,11 @@
 												Privacy Policy
 											</a>
 										</div>
+											<div class="testimonial-block" style="font-size: 17px; font-style: italic; color: grey	;">					
+											<a style="color: grey;" href="terms.html">
+												Terms & Conditions
+											</a>
+											</div>
 									</div>
 										</div>
 									</div>
